# forum-system-api-react

./: .gitignore  README.md  index.html  package.json  pyproject.toml
forum_system_api/: config.py  main.py
forum_system_api/api/api_v1/: api.py
forum_system_api/persistence/: database.py  fake_database.py  init_data.py
forum_system_api/schemas/: category.py  category_permission.py  common.py  conversation.py  custom_types.py  message.py  reply.py  topic.py  user.py
forum_system_api/services/: auth_service.py  category_service.py  conversation_service.py  message_service.py  reply_service.py  topic_service.py  user_service.py  websocket_manager.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/pages/: login.jsx  (+3 more)
src/: App.jsx  main.jsx
src/service/: WebSocketManager.js  auth.jsx  axiosInstance.js  server.js
src/styles/: conversation_view.css  header.css  login_signup.css  topics.css
tests/: config_test.py  database_test.py  password_utils_test.py
tests/models/: access_level_test.py  user_test.py
tests/routes/: auth_router_test.py  category_router_test.py  conversation_router_test.py  message_router_test.py  reply_router_test.py  topic_router_test.py  user_router_test.py
tests/schemas/: user_test.py
tests/services/: auth_service_test.py  category_access_utils_test.py  category_service_test.py  conversation_service_test.py  message_service_test.py  reply_service_test.py  test_data.py  test_data_const.py  test_data_obj.py  topic_service_test.py  user_service_test.py  utils.py
(+89 files in other folders)
